hero-section done

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,3 +1,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~bootstrap/scss/bootstrap";
 @import "~font-awesome/scss/font-awesome";
+
+.ratio-695x742 {
+  --bs-aspect-ratio: calc(742 / 695 * 100%);
+}
