--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -5,3 +5,7 @@ $fa-font-path: "~font-awesome/fonts";
 .ratio-695x742 {
   --bs-aspect-ratio: calc(742 / 695 * 100%);
 }
+
+.ratio-974x514{
+  --bs-aspect-ratio: calc(514 / 974 * 100%);
+}
